--- a/1-Intro-R.qmd
+++ b/1-Intro-R.qmd
@@ -313,7 +313,7 @@ total * 1.21
 
 Clear comments turn code into a readable narrative, which helps others (and your future self) understand the logic behind your analysis.
 
-### How Functions Work in R {#sec-ch1-functions-in-r}
+### How Functions Work in R {.unnumbered}
 
 Functions are at the heart of R. They allow you to perform powerful operations with just a line or two of code, whether you are calculating a summary statistic, transforming a dataset, or creating a plot. Learning how to use functions effectively is one of the most important skills in your R journey.
 
@@ -1306,8 +1306,6 @@ Now that you have installed R, explored its key concepts, and visualized data wi
 
 Use the exercises below to reinforce your understanding of the tools and concepts introduced in this chapter. Begin with foundational tasks, then build toward more complex data exploration and visualization challenges.
 
-### Basic Exercises {.unnumbered}
-
 1.  Install R and RStudio on your computer.
 
 2.  Use `getwd()` to check your current working directory. Then use `setwd()` to change it to a location of your choice.
@@ -1353,7 +1351,7 @@ Display the first few rows using `head()`.
 
 Render the report to HTML.
 
-### More Challenging Exercises {.unnumbered}
+#### More Challenging Exercises {.unnumbered}
 
 17. Simulate a dataset of 200 patients using the following code. Then, use `summary()` to explore the dataset. This data will be used in Chapter [-@sec-ch7-classification-knn].
 
@@ -1436,7 +1434,7 @@ Then use `geom_line()` to plot the curves. Customize line colors and add informa
 
 28. For Exercise 26, change the number of days in your tiny gains plot. What do you observe if you compare 30 days to 365?
 
-### Reflect and Connect {.unnumbered}
+#### Reflect and Connect {.unnumbered}
 
 These reflection questions encourage you to pause, assess your progress, and consider your goals as you continue.
 
