--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -1240,9 +1240,9 @@ In the next chapter, we explore decision trees and random forest methods. These 
 
 These exercises reinforce key ideas from the chapter, combining conceptual questions, interpretation of regression outputs, and practical implementation in R. The datasets used are included in the **liver** and **ggplot2** packages.
 
-### Linear Regression {.unnumbered}
+#### Linear Regression {.unnumbered}
 
-#### Conceptual Questions {.unnumbered}
+##### Conceptual Questions {.unnumbered}
 
 1.  How does simple linear regression differ from multiple linear regression?
 
@@ -1258,7 +1258,7 @@ These exercises reinforce key ideas from the chapter, combining conceptual quest
 
 7.  How are categorical variables handled in regression models in R?
 
-#### Hands-On Practice: Regression with the *house* Dataset {.unnumbered}
+##### Hands-On Practice: Regression with the *house* Dataset {.unnumbered}
 
 ``` r
 data(house, package = "liver")
@@ -1278,7 +1278,7 @@ data(house, package = "liver")
 
 14. Use a Q-Q plot to assess the normality of residuals.
 
-#### Hands-On Practice: Regression with the *insurance* Dataset {.unnumbered}
+##### Hands-On Practice: Regression with the *insurance* Dataset {.unnumbered}
 
 ``` r
 data(insurance, package = "liver")
@@ -1294,7 +1294,7 @@ data(insurance, package = "liver")
 
 19. Use stepwise regression to find a simpler model with comparable performance.
 
-#### Hands-On Practice: Regression with the *cereal* Dataset {.unnumbered}
+##### Hands-On Practice: Regression with the *cereal* Dataset {.unnumbered}
 
 ``` r
 data(cereal, package = "liver")
@@ -1310,7 +1310,7 @@ data(cereal, package = "liver")
 
 24. Use stepwise regression to identify a more parsimonious model.
 
-#### Hands-On Practice: Regression with the *diamonds* Dataset {.unnumbered}
+##### Hands-On Practice: Regression with the *diamonds* Dataset {.unnumbered}
 
 These exercises use the *diamonds* dataset from the **ggplot2** package. Recall that this dataset contains over 50,000 records of diamond characteristics and their prices. Use the dataset after appropriate cleaning and transformation, as discussed in Chapter [-@sec-ch3-data-preparation].
 
@@ -1336,9 +1336,9 @@ data(diamonds)
 
 32. Challenge: Explore whether the effect of `carat` on `price` differs by `cut`. Add an interaction term between `carat` and `cut` to your model. Interpret the interaction and discuss whether it adds value to the model.
 
-### Polynomial Regression {.unnumbered}
+#### Polynomial Regression {.unnumbered}
 
-#### Conceptual Questions {.unnumbered}
+##### Conceptual Questions {.unnumbered}
 
 33. What is polynomial regression, and how does it extend linear regression?
 
@@ -1350,7 +1350,7 @@ data(diamonds)
 
 37. What visual or statistical tools can help detect overfitting?
 
-#### Hands-On Practice: Polynomial Regression with *house* Dataset {.unnumbered}
+##### Hands-On Practice: Polynomial Regression with *house* Dataset {.unnumbered}
 
 38. Fit a quadratic model for `unit.price` using `house.age`. Compare it to a linear model.
 
@@ -1362,9 +1362,9 @@ data(diamonds)
 
 42. Interpret the coefficients of the quadratic model.
 
-### Logistic Regression {.unnumbered}
+#### Logistic Regression {.unnumbered}
 
-#### Conceptual Questions {.unnumbered}
+##### Conceptual Questions {.unnumbered}
 
 43. What distinguishes logistic regression from linear regression?
 
@@ -1376,7 +1376,7 @@ data(diamonds)
 
 47. Distinguish between precision and recall in classification evaluation.
 
-#### Hands-On Practice: Logistic Regression with *bank* Dataset {.unnumbered}
+##### Hands-On Practice: Logistic Regression with *bank* Dataset {.unnumbered}
 
 ``` r
 data(bank, package = "liver")
@@ -1396,7 +1396,7 @@ data(bank, package = "liver")
 
 54. Plot the ROC curve and compute the AUC.
 
-#### Hands-On Practice: Stepwise Regression with *house* Dataset {.unnumbered}
+##### Hands-On Practice: Stepwise Regression with *house* Dataset {.unnumbered}
 
 55. Use stepwise regression to model `unit.price`.
 
@@ -1404,7 +1404,7 @@ data(bank, package = "liver")
 
 57. Add interaction terms. Do they improve model performance?
 
-### Model Diagnostics and Validation {.unnumbered}
+#### Model Diagnostics and Validation {.unnumbered}
 
 58. Check linear regression assumptions for the multiple regression model on `house`.
 
@@ -1416,6 +1416,6 @@ data(bank, package = "liver")
 
 62. Does applying a log-transformation improve model accuracy?
 
-### Self-Reflection {.unnumbered}
+#### Self-Reflection {.unnumbered}
 
 63. Think of a real-world prediction problem you care about, such as pricing, health outcomes, or consumer behavior. Which regression technique covered in this chapter would be most appropriate, and why?
