--- a/11-Tree-based-models.qmd
+++ b/11-Tree-based-models.qmd
@@ -317,9 +317,9 @@ adult$race = fct_recode(adult$race, "Amer-Indian" = "Amer-Indian-Eskimo",
 
 These transformations reduce the risk of overfitting and help the tree-based models generalize better. With these steps complete, the dataset is ready for training and evaluation, which we turn to in the next section.
 
-### Setup Data for Modeling {.unnumbered}
+### Data Setup to Model {.unnumbered}
 
-With the dataset cleaned and categorical variables simplified, we are ready to set up the data for training and evaluation. This corresponds to **Step 4: Setup Data for Modeling** in the Data Science Workflow introduced in Chapter [-@sec-ch2-intro-data-science] and discussed in detail in Chapter [-@sec-ch6-setup-data]. It marks the transition from data preparation to model development.
+With the dataset cleaned and categorical variables simplified, we are ready to set up the data for training and evaluation. This corresponds to *Step 4: Data Setup to Model* in the Data Science Workflow introduced in Chapter [-@sec-ch2-intro-data-science] and discussed in detail in Chapter [-@sec-ch6-setup-data]. It marks the transition from data preparation to model development.
 
 To evaluate how well our models generalize to new data, we divide the dataset into two parts: a *training set* (80%) for model building and a *testing set* (20%) for performance assessment. This ensures an unbiased estimate of model accuracy on unseen data. Following the convention used in previous chapters, we use the `partition()` function from the **liver** package:
 
@@ -649,7 +649,7 @@ You are encouraged to engage with the exercises provided at the end of the chapt
 
 Ready to put theory into practice? The exercises below invite you to test your understanding of Decision Trees and Random Forests through conceptual questions and hands-on modeling with real datasets.
 
-### Conceptual Questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Explain the basic structure of a Decision Tree and how it makes predictions.
 
@@ -685,19 +685,19 @@ Ready to put theory into practice? The exercises below invite you to test your u
 
 17. How does increasing the number of trees (`ntree`) affect model performance?
 
-### Hands-On: Classification with the Churn Dataset {.unnumbered}
+#### Hands-On Practice: Classification with the *churn* Dataset {.unnumbered}
 
-In the case study of the previous chapter (Section [-@sec-ch10-case-study]), we fitted Logistic Regression, Naive Bayes, and k-Nearest Neighbors models to the churn dataset using the Data Science Workflow. Here, we extend the analysis by applying tree-based models: Decision Trees (CART and C5.0) and Random Forests. You can reuse the earlier data preparation code and directly compare the new models with those from the previous case study to deepen your understanding of classification techniques.
+In the case study of the previous chapter (Section [-@sec-ch10-case-study]), we fitted Logistic Regression, Naive Bayes, and k-Nearest Neighbors models to the *churn* dataset using the Data Science Workflow. Here, we extend the analysis by applying tree-based models: Decision Trees (CART and C5.0) and Random Forests. You can reuse the earlier data preparation code and directly compare the new models with those from the previous case study to deepen your understanding of classification techniques.
 
 The *churn* dataset contains information about customer churn behavior in a telecommunications company. The goal is to predict whether a customer will churn based on various attributes.
 
-#### Data Setup to Model {.unnumbered}
+##### Data Setup to Model {.unnumbered}
 
 18. Load the *churn* dataset and generate a summary. Identify the target variable and the predictors to be used in the analysis.
 
 19. Partition the dataset into a training set (80%) and a test set (20%) using the `partition()` function from the **liver** package. For reproducibility, use the same random seed as in Section [-@sec-ch10-case-study].
 
-#### Modeling with Decision Trees (CART) {.unnumbered}
+##### Modeling with Decision Trees (CART) {.unnumbered}
 
 20. Fit a Decision Tree using the CART algorithm, with `churn` as the response variable and the following predictors: `account.length`, `voice.plan`, `voice.messages`, `intl.plan`, `intl.mins`, `intl.calls`, `day.mins`, `day.calls`, `eve.mins`, `eve.calls`, `night.mins`, `night.calls`, and `customer.calls`. (See Section [-@sec-ch10-case-study] for the rationale behind these predictor choices.)
 
@@ -711,7 +711,7 @@ The *churn* dataset contains information about customer churn behavior in a tele
 
 25. Evaluate the effect of pruning the tree by adjusting the complexity parameter (`cp`).
 
-#### Modeling with Decision Trees (C5.0) {.unnumbered}
+##### Modeling with Decision Trees (C5.0) {.unnumbered}
 
 26. Fit a C5.0 Decision Tree using the same predictors as in the CART model.
 
@@ -719,7 +719,7 @@ The *churn* dataset contains information about customer churn behavior in a tele
 
 28. Compare the confusion matrices and overall classification accuracies between the CART and C5.0 models.
 
-#### Modeling with Random Forests {.unnumbered}
+##### Modeling with Random Forests {.unnumbered}
 
 29. Fit a Random Forest model using the same predictors.
 
@@ -741,11 +741,11 @@ The *churn* dataset contains information about customer churn behavior in a tele
 
 38. Evaluate whether the simplified Random Forest model performs comparably to the full model.
 
-### Regression Trees and Random Forests {.unnumbered}
+#### Regression Trees and Random Forests {.unnumbered}
 
 We now turn to regression tasks, using the *redWines* dataset from **liver** package to predict wine quality.
 
-#### Conceptual Questions {.unnumbered}
+##### Conceptual Questions {.unnumbered}
 
 39. How does a regression tree differ from a classification tree?
 
@@ -753,11 +753,11 @@ We now turn to regression tasks, using the *redWines* dataset from **liver** pac
 
 41. Why is Random Forest regression often preferred over a single regression tree?
 
-#### Hands-On: Regression with the redWines Dataset {.unnumbered}
+##### Hands-On Practice: Regression with the redWines Dataset {.unnumbered}
 
 Now, apply what you have learned to a real-world regression problem.
 
-#### Data Setup to Model {.unnumbered}
+##### Data Setup to Model {.unnumbered}
 
 Load the *redWines* dataset and partition it into a training set (70%) and a test set (30%).
 
@@ -774,7 +774,7 @@ test_set  = data_sets$part2
 test_labels = test_set$quantity
 ```
 
-#### Modeling and Evaluation {.unnumbered}
+##### Modeling and Evaluation {.unnumbered}
 
 42. Fit a regression tree predicting `quantity` based on all predictors.
 
