--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -406,9 +406,9 @@ The dataset contains `r nrow(bank)` observations and `r ncol(bank)` variables. T
 
 This dataset contains a diverse set of features related to customer demographics and past interactions, making it well-suited for building predictive models to improve marketing strategies. Because the dataset is already clean and well-structured, we can skip the initial data cleaning steps. We now proceed to *Step 4: Set Up Data for Modeling* in the *Data Science Workflow* introduced in Chapter [-@sec-ch2-intro-data-science] and illustrated in @fig-ch2_DSW.
 
-### Setup Data for Modeling {.unnumbered}
+### Data Setup to Model {.unnumbered}
 
-*How do we know if a model will perform well on customers it has never seen?* The answer begins with how we split the data. This step corresponds to Stage 4 of the Data Science Workflow: *Setup Data for Modeling* (Chapter [-@sec-ch2-intro-data-science]). Our goal is to divide the dataset into separate training and test sets, allowing us to build models on past data and evaluate how well they generalize to new customers. Although we use a neural network for this case study, the same data split can be used to train and compare other classification models introduced in previous chapters (such as logistic regression in Chapter [-@sec-ch10-regression], k-nearest neighbors in Chapter [-@sec-ch7-classification-knn], or Naive Bayes in Chapter [-@sec-ch9-bayes]). This allows for a fair evaluation of model performance under the same conditions, as discussed in the chapter on Model Evaluation (Chapter [-@sec-ch8-evaluation]).
+*How do we know if a model will perform well on customers it has never seen?* The answer begins with how we split the data. This step corresponds to Stage 4 of the Data Science Workflow: *Data Setup to Model* (Chapter [-@sec-ch2-intro-data-science]). Our goal is to divide the dataset into separate training and test sets, allowing us to build models on past data and evaluate how well they generalize to new customers. Although we use a neural network for this case study, the same data split can be used to train and compare other classification models introduced in previous chapters (such as logistic regression in Chapter [-@sec-ch10-regression], k-nearest neighbors in Chapter [-@sec-ch7-classification-knn], or Naive Bayes in Chapter [-@sec-ch9-bayes]). This allows for a fair evaluation of model performance under the same conditions, as discussed in the chapter on Model Evaluation (Chapter [-@sec-ch8-evaluation]).
 
 We use an 80/20 split, allocating 80% of the data for training and 20% for testing. But why 80/20? Would a 70/30 or 90/10 split yield different results? There is no universally optimal ratio: it often depends on dataset size and the trade-off between training data and evaluation reliability. You are encouraged to try different splits and reflect on the results.
 
@@ -499,11 +499,11 @@ To visualize the effect of scaling, we compare the distribution of `age` before 
 
 ggplot(data = train_set) +
   geom_histogram(mapping = aes(x = age), colour = "darkblue", fill = "lightblue") +
-  ggtitle("Variable 'age' before scaling")
+  ggtitle("Before min-max scaling")
 
 ggplot(data = train_scaled) +
   geom_histogram(mapping = aes(x = age), colour = "darkblue", fill = "lightblue") +
-  ggtitle("Variable 'age' after scaling")
+  ggtitle("After min-max scaling")
 ```
 
 The first histogram (left) shows the distribution of `age` in the training set before scaling, while the second histogram (right) shows the distribution after applying min-max scaling. The values are mapped to the interval \[0, 1\] while preserving the original shape of the distribution.
@@ -699,7 +699,7 @@ As you move into the exercises, consider experimenting with different architectu
 
 These exercises help consolidate your understanding of neural networks by encouraging you to apply what you’ve learned, reflect on key concepts, and compare neural networks with alternative classification models. The exercises are grouped into three categories: conceptual questions, practical modeling tasks using the *bank* dataset, and comparative analysis using the *adult* dataset.
 
-### Conceptual questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Describe how a neural network is structured, and explain the function of each layer (input, hidden, output).
 
@@ -733,11 +733,11 @@ These exercises help consolidate your understanding of neural networks by encour
 
 16. Reflect on a real-world application (e.g., fraud detection, voice recognition, or image classification). Why might a neural network be a suitable model? What trade-offs would you consider?
 
-### Practical exercises using the *bank* dataset {.unnumbered}
+#### Hands-On Practice: Nerual Network with the *bank* Dataset {.unnumbered}
 
-In the case study, we used a subset of predictors from the *bank* dataset to build a simple neural network model. This time, you will use **all** available features to further explore the dataset, build more sophisticated models, and compare performance across techniques.
+In the case study, we used a subset of predictors from the *bank* dataset to build a simple neural network model. This time, you will use *all* available features to further explore the dataset, build more sophisticated models, and compare performance across techniques.
 
-#### Data preparation and model training {.unnumbered}
+##### Data Setup to Model {.unnumbered}
 
 17. Load the *bank* dataset and examine its structure. Which variables are categorical? Which are numeric?
 
@@ -757,7 +757,7 @@ In the case study, we used a subset of predictors from the *bank* dataset to bui
 
 25. Train a model using cross-entropy loss instead of sum of squared errors. Which performs better?
 
-#### Model evaluation and comparison with tree-based models {.unnumbered}
+##### Model Evaluation and Comparison with Tree-Based Models {.unnumbered}
 
 26. Compute the confusion matrix. Interpret the model’s precision, recall, and F1-score.
 
@@ -771,7 +771,7 @@ In the case study, we used a subset of predictors from the *bank* dataset to bui
 
 31. Which model (decision tree, random forest, logistic regression, or neural network) performs best in terms of accuracy, precision, and recall? What trade-offs do you observe among these models?
 
-#### Training Neural Networks on the *adult* Dataset {.unnumbered}
+#### Hands-On Practice: Nerual Network with the *adult* Dataset {.unnumbered}
 
 This set of exercises extends your neural network modeling skills to a second dataset (the *adult* dataset), commonly used to predict whether an individual earns more than \$50K per year based on demographic and employment attributes. For data preparation steps (including handling missing values, encoding categorical variables, and scaling numerical features), refer to the case study in the previous chapter (Section [-@sec-ch11-case-study]). Reusing the same preprocessing pipeline ensures a fair comparison between neural networks and tree-based models (CART, C5.0, and random forest).
 
@@ -801,7 +801,7 @@ This set of exercises extends your neural network modeling skills to a second da
 
 44. Which model performs better in predicting high-income individuals, and why?
 
-### Self-Reflection {.unnumbered}
+#### Self-Reflection {.unnumbered}
 
 45. Looking back at your work in this chapter, reflect on how model complexity, interpretability, and predictive performance differ across algorithms. What trade-offs arise in choosing between a neural network and a simpler model like logistic regression or a decision tree? How might these considerations influence model selection in real-world applications?
 
