--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -359,6 +359,7 @@ ggplot(data = cereal_mm) +
     geom_histogram(aes(x = sodium), color = "blue", fill = "lightblue") + 
     ggtitle("After min-max scaling")
 ```
+
 As shown in the histograms, the sodium feature is rescaled to the $[0, 1]$ range. This prevents variables like sodium or potassium (originally measured in large units) from overpowering the clustering process.
 
 With the dataset cleaned, imputed, and normalized, we are now ready to explore how cereals naturally group together. But first, how many clusters should we use?
@@ -464,7 +465,7 @@ This practical application highlighted the value of clustering in uncovering pat
 
 The exercises are grouped into two categories: conceptual questions and practical exercises using the *redWines* dataset, applying clustering techniques to real-world data.
 
-### Conceptual questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  What is clustering, and how does it differ from classification?
 
@@ -506,11 +507,11 @@ The exercises are grouped into two categories: conceptual questions and practica
 
 20. What are alternative clustering methods that are more robust to outliers than K-means?
 
-### Practical Exercises {.unnumbered}
+#### Hands-On Practice: k-mean with the *redWines* Dataset {.unnumbered}
 
 These exercises use the *redWines* dataset from the **liver** package, which contains chemical properties of red wines and their quality scores. Your goal is to apply clustering techniques to uncover natural groupings in the wines, without using the quality label during clustering.
 
-#### Data preparation and exploratory analysis {.unnumbered}
+##### Data Preparation and Exploratory Analysis {.unnumbered}
 
 21. Load the *redWines* dataset from the **liver** package and inspect its structure.
 
@@ -528,7 +529,7 @@ str(redWines)
 
 25. Apply min-max scaling to normalize all numerical variables before clustering. Why is this step necessary?
 
-#### Applying K-means clustering {.unnumbered}
+##### Applying k-means Clustering {.unnumbered}
 
 26. Use the elbow method to determine the optimal number of clusters for the dataset.
 
@@ -546,7 +547,7 @@ fviz_nbclust(redWines, kmeans, method = "wss")
 
 30. Identify the centroids of the final clusters and interpret their meaning.
 
-#### Interpreting the clusters {.unnumbered}
+##### Interpreting the Clusters {.unnumbered}
 
 31. Assign the cluster labels to the original dataset and examine the average chemical composition of each cluster.
 
