--- a/2-Intro-data-science.qmd
+++ b/2-Intro-data-science.qmd
@@ -383,8 +383,6 @@ In the next chapter, we turn to *data preparation*, the practical starting point
 
 The exercises below are designed to reinforce the key ideas introduced in this chapter. They progress from basic definitions and conceptual understanding to applied scenarios, model evaluation, ethical considerations, and personal reflection. These questions support both individual learning and classroom discussion, and they are intended to help you build fluency with the data science workflow and the role of machine learning within it.
 
-### Warm-Up Questions {.unnumbered}
-
 1.  Define *data science* in your own words. What makes it an interdisciplinary field?
 
 2.  How does *machine learning* differ from traditional rule-based programming?
@@ -395,7 +393,7 @@ The exercises below are designed to reinforce the key ideas introduced in this c
 
 5.  How is machine learning related to *artificial intelligence*? In what ways do they differ?
 
-### Exploring the Data Science Workflow {.unnumbered}
+#### Exploring the Data Science Workflow {.unnumbered}
 
 6.  Why is the *Problem Understanding* phase essential to the success of a data science project?
 
@@ -407,7 +405,7 @@ The exercises below are designed to reinforce the key ideas introduced in this c
 
 10. List common data quality issues that must be addressed before modeling can proceed effectively.
 
-### Applied Scenarios and Case-Based Thinking {.unnumbered}
+#### Applied Scenarios and Case-Based Thinking {.unnumbered}
 
 11. For each of the following scenarios, identify the most relevant stage of the Data Science Workflow:
 
@@ -424,7 +422,7 @@ The exercises below are designed to reinforce the key ideas introduced in this c
 
 15. How would you approach handling missing data in a dataset that includes both numerical and categorical variables?
 
-### Applying Machine Learning Methods {.unnumbered}
+#### Applying Machine Learning Methods {.unnumbered}
 
 16. For each task below, classify it as *supervised* or *unsupervised* learning, and suggest an appropriate algorithm:
 
@@ -441,7 +439,7 @@ The exercises below are designed to reinforce the key ideas introduced in this c
 
 20. What are the trade-offs between *interpretability* and *predictive performance* in machine learning models?
 
-### Evaluation, Bias, and Fairness {.unnumbered}
+#### Evaluation, Bias, and Fairness {.unnumbered}
 
 21. Why is *accuracy* not always a reliable metric for classification, especially in imbalanced datasets?
 
@@ -455,7 +453,7 @@ The exercises below are designed to reinforce the key ideas introduced in this c
 
 26. List three practices data scientists can adopt to reduce algorithmic bias and promote fairness.
 
-### Broader Reflections and Ethics {.unnumbered}
+#### Broader Reflections and Ethics {.unnumbered}
 
 27. To what extent can data science workflows be automated? What are the potential risks of full automation?
 
