--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -749,7 +749,7 @@ Next chapter, we move to exploratory data analysis, where we begin uncovering pa
 
 This section includes exercises designed to deepen your understanding of data preparation. They cover conceptual questions, hands-on practice with the *diamonds* and *adult* datasets, and reflection on ethical and real-world issues. These exercises can be completed in R and build on the examples discussed in this chapter.
 
-### Understanding Data Types {.unnumbered}
+#### Understanding Data Types {.unnumbered}
 
 1.  Explain the difference between continuous and discrete numerical variables, and give a real-world example of each.
 
@@ -759,7 +759,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 4.  Why is it important to identify the correct data types before modeling?
 
-### Working with the Diamonds Dataset {.unnumbered}
+#### Working with the Diamonds Dataset {.unnumbered}
 
 5.  Use `summary()` to inspect the *diamonds* dataset. What patterns or irregularities do you notice?
 
@@ -767,7 +767,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 7.  Create histograms of `carat` and `price`. Describe their distributions and note any skewness or gaps.
 
-### Detecting and Treating Outliers {.unnumbered}
+#### Detecting and Treating Outliers {.unnumbered}
 
 8.  Identify outliers in the `x` variable using boxplots and histograms. If outliers are found, apply a method to handle them as done for `y` in Section [-@sec-ch3-data-pre-outliers].
 
@@ -777,7 +777,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 11. Discuss the pros and cons of removing outliers versus applying a transformation. Use examples from this chapter to support your answer.
 
-### Encoding Categorical Variables {.unnumbered}
+#### Encoding Categorical Variables {.unnumbered}
 
 12. Show how to apply ordinal encoding to the `cut` variable in the *diamonds* dataset.
 
@@ -787,7 +787,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 15. Under what conditions is frequency encoding more appropriate than one-hot encoding?
 
-### Exploring the Adult Dataset {.unnumbered}
+#### Exploring the Adult Dataset {.unnumbered}
 
 16. Load the *adult* dataset from the **liver** package and classify its categorical variables as nominal or ordinal.
 
@@ -799,7 +799,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 20. Create a correlation matrix for the numerical variables. What do the correlations reveal about the relationships between features?
 
-### Feature Engineering and Scaling {.unnumbered}
+#### Feature Engineering and Scaling {.unnumbered}
 
 21. Use the `cut()` function to group `age` into three categories: Young ($\le 30$), Middle-aged (31–50), and Senior ($>50$). Name the new variable `Age_Group`.
 
@@ -815,7 +815,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 27. Apply z-score scaling to the same variables. How do the results compare to min-max scaling?
 
-### Modeling and Real-World Scenarios {.unnumbered}
+#### Modeling and Real-World Scenarios {.unnumbered}
 
 28. If you were designing a credit scoring system, how would you encode features like `employment.type` or `loan.purpose`?
 
@@ -825,7 +825,7 @@ This section includes exercises designed to deepen your understanding of data pr
 
 31. Would you handle outliers in patient temperature data differently than outliers in income data? Explain your reasoning.
 
-### Ethics and Reflection {.unnumbered}
+#### Ethics and Reflection {.unnumbered}
 
 32. What ethical concerns might arise from dropping rows with missing data, particularly for underrepresented groups?
 
