--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -294,12 +294,10 @@ As a binary categorical variable, `intl.plan` allows for a straightforward compa
 #| fig-height: 4
 
 ggplot(data = churn) + 
-  geom_bar(aes(x = intl.plan, fill = churn)) +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+  geom_bar(aes(x = intl.plan, fill = churn))  
 
 ggplot(data = churn) + 
-  geom_bar(aes(x = intl.plan, fill = churn), position = "fill") +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+  geom_bar(aes(x = intl.plan, fill = churn), position = "fill") 
 ```
 
 The first plot shows the absolute number of churners and non-churners in each group. The second, normalized by group size, reveals a sharper insight: customers subscribed to an international plan are disproportionately more likely to churn.
@@ -327,12 +325,10 @@ We now turn to another service-related feature: the voice mail plan. The variabl
 #| fig-height: 4
 
 ggplot(data = churn) + 
-  geom_bar(aes(x = voice.plan, fill = churn)) +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+  geom_bar(aes(x = voice.plan, fill = churn)) 
 
 ggplot(data = churn) + 
-  geom_bar(aes(x = voice.plan, fill = churn), position = "fill") +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+  geom_bar(aes(x = voice.plan, fill = churn), position = "fill") 
 ```
 
 The left panel displays the absolute number of customers who churned or remained, segmented by voice mail plan subscription. The right panel presents the same information in proportional form, highlighting differences in churn rates between groups. While the difference is not dramatic, customers with a voice mail plan appear to churn at slightly lower rates.
@@ -386,12 +382,10 @@ The bar plot reveals a right-skewed distribution: most customers contact support
 
 ggplot(data = churn) +
   geom_bar(aes(x = factor(customer.calls), fill = churn), position = "stack") +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) +
   labs(x = "Number of Service Calls", y = "Count", fill = "Churn")
 
 ggplot(data = churn) +
   geom_bar(aes(x = factor(customer.calls), fill = churn), position = "fill") +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) +
   labs(x = "Number of Service Calls", y = "Proportion", fill = "Churn")
 ```
 
@@ -439,7 +433,7 @@ Since both variables are continuous, we begin by visualizing `eve.mins` using a 
 
 ggplot(data = churn, aes(x = churn, y = eve.mins)) +
   geom_violin(trim = FALSE) + 
-  geom_boxplot(width = 0.1) +
+  geom_boxplot(width = 0.3, fill = c("palevioletred1", "darkseagreen1")) +
   labs(x = "Churn", y = "Evening Minutes")
 
 ggplot(data = churn) +
@@ -556,7 +550,6 @@ Let us begin by jointly analyzing `day.mins` (daytime call duration) and `eve.mi
 ```{r}
 ggplot(data = churn) +
     geom_point(aes(x = eve.mins, y = day.mins, color = churn), size = 0.7, alpha = 0.8) +
-    scale_color_manual(values = c("palevioletred1", "darkseagreen1")) +
     geom_abline(intercept = 400, slope = -0.6, color = "blue", size = 1)
 ```
 
@@ -585,12 +578,11 @@ Next, we examine another potential interaction: the relationship between `custom
 ```{r}
 ggplot(data = churn, aes(x = day.mins, y = customer.calls, color = churn)) +
   geom_point(alpha = 0.7) +
-  scale_color_manual(values = c("palevioletred1", "darkseagreen1")) + 
-  geom_point(data = data.frame(day.mins = 110, customer.calls = 5.5), colour = "orange", size = 50, shape = 1) + 
-  geom_point(data = data.frame(day.mins = 310, customer.calls = 2.0), colour = "orange", size = 40, shape = 1)
+  geom_point(data = data.frame(day.mins = 110, customer.calls = 5.5), colour = "blue", size = 50, shape = 1) + 
+  geom_point(data = data.frame(day.mins = 310, customer.calls = 2.0), colour = "blue", size = 40, shape = 1)
 ```
 
-This scatter plot highlights an interesting pattern. Customers who contact support frequently but have low usage (orange circle, top-left) tend to churn at higher rates, perhaps reflecting frustration despite limited use of the service. In contrast, customers with both high usage and frequent support contact (orange circle, bottom-right) show more mixed churn outcomes, possibly because they value the service highly even when problems arise.
+This scatter plot highlights an interesting pattern. Customers who contact support frequently but have low usage (blue circle, top-left) tend to churn at higher rates, perhaps reflecting frustration despite limited use of the service. In contrast, customers with both high usage and frequent support contact (blue circle, bottom-right) show more mixed churn outcomes, possibly because they value the service highly even when problems arise.
 
 Together, these examples illustrate how multivariate analysis can expose interaction effects and behavioral subgroups that are not apparent in simpler analyses. From a modeling perspective, such findings suggest opportunities to engineer features that capture joint effects, such as interaction terms or binary flags for high-risk combinations. From a business standpoint, these insights can guide proactive interventions aimed at specific customer profiles.
 
@@ -628,7 +620,7 @@ These findings lay the groundwork for the next stages of analysis. Equipped with
 
 The following exercises are designed to reinforce core principles of exploratory data analysis introduced in this chapter. They span conceptual understanding, hands-on implementation, and critical thinking. The section begins with interpretive questions, followed by applied analysis using the *bank* dataset, and concludes with advanced challenge problems for synthesis and reflection.
 
-### Conceptual Questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Why is exploratory data analysis essential before building predictive models? What risks might arise if this step is skipped?
 
@@ -660,7 +652,7 @@ The following exercises are designed to reinforce core principles of exploratory
 
 15. Why are missing values important to address during EDA? Discuss strategies for handling missing data and when each might be appropriate.
 
-### Hands-On Practice: Exploring the Bank Dataset {.unnumbered}
+#### Hands-On Practice: Exploring the *bank* Dataset {.unnumbered}
 
 The *bank* dataset from the R package **liver** contains data on direct marketing campaigns of a Portuguese bank. The objective is to predict whether a client subscribes to a term deposit. This dataset will also be used for classification in Chapters [-@sec-ch7-classification-knn] and [-@sec-ch12-neural-networks]. More details: <https://rdrr.io/cran/liver/man/bank.html>
 
@@ -702,7 +694,7 @@ str(bank)
 
 30. *Campaign Comparison*: How do success rates vary across campaigns? What strategies might this suggest?
 
-### Challenge Problems {.unnumbered}
+#### Challenge Problems {.unnumbered}
 
 31. *Data Storytelling from EDA*: Create a concise 1–2 plot visual summary of an EDA finding from the *bank* dataset. Focus on making the insight clear to a non-technical audience, using clean annotations and brief explanation.
 
