--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -217,7 +217,7 @@ Many learners find it challenging to identify which test suits their specific qu
 
 ::: {#tbl-hypothesis-test .table}
 | Test                         | Null Hypothesis ($H_0$)      | Applied To                                     |
-|------------------------------|------------------------------|------------------------------------------------|
+|--------------------|--------------------|--------------------------------|
 | One-sample t-test            | $H_0: \mu = \mu_0$           | Single numerical variable                      |
 | Test for Proportion          | $H_0: \pi = \pi_0$           | Single categorical variable                    |
 | Two-sample t-test            | $H_0: \mu_1 = \mu_2$         | Numerical outcome by binary group              |
@@ -617,7 +617,7 @@ In the next chapter, we transition from inference to modeling, beginning with on
 
 This set of exercises is designed to help you consolidate and apply what you have learned about statistical inference. They are organized into three parts: conceptual questions to deepen your theoretical grasp, hands-on tasks to practice applying inference methods in R, and reflection prompts to encourage thoughtful integration of statistical thinking into your broader data science workflow.
 
-### Conceptual Questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Why is hypothesis testing important in data science? Explain its role in making data-driven decisions and how it complements exploratory data analysis.
 
@@ -637,7 +637,7 @@ This set of exercises is designed to help you consolidate and apply what you hav
 
 9.  The *Analysis of Variance* (ANOVA) test is designed to compare means across multiple groups. Why can’t multiple t-tests be used instead? What is the advantage of using ANOVA in this context?
 
-### Hands-On Practice: Hypothesis Testing in R {.unnumbered}
+#### Hands-On Practice: Hypothesis Testing in R {.unnumbered}
 
 For the following exercises, use the *churn*, *bank*, *marketing*, and *diamonds* datasets available in the **liver** and **ggplot2** packages. We have previously used the *churn*, *bank*, and *diamonds* datasets in this and earlier chapters. In @sec-ch10-regression, we will introduce the *marketing* dataset for regression analysis.
 
@@ -755,7 +755,7 @@ State the null and alternative hypotheses. Report the *p*-value and determine wh
 
 29. Suppose a hypothesis test indicates that customers with a Voice Mail Plan are significantly less likely to churn (*p* $<$ 0.01). What are some potential business strategies a company could implement based on this finding? Beyond statistical significance, what additional factors should be considered before making marketing decisions?
 
-### Reflection {.unnumbered}
+#### Reflection {.unnumbered}
 
 30. How do confidence intervals and hypothesis tests complement each other when assessing the reliability of results in data science?
 
