--- a/6-Setup-data.qmd
+++ b/6-Setup-data.qmd
@@ -250,7 +250,7 @@ Together, these preparatory steps mitigate common risks such as biased evaluatio
 
 This section includes both *conceptual questions* and *applied programming exercises* that reinforce key ideas from the chapter. The goal is to consolidate essential preparatory steps for predictive modeling, with a focus on partitioning, validating, and, when necessary, balancing datasets to support fair and generalizable learning.
 
-### Conceptual Questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Why is partitioning the dataset crucial before training a machine learning model? Explain its role in ensuring generalization.
 
@@ -282,7 +282,7 @@ This section includes both *conceptual questions* and *applied programming exerc
 
 15. After completing this chapter, which preparatory step (partitioning, validating, or balancing) do you find most critical for building trustworthy models, and why?
 
-### Hands-On Practice {.unnumbered}
+#### Hands-On Practice {.unnumbered}
 
 The following exercises use the *churn*, *bank*, and *risk* datasets from the **liver** package. The *churn* and *bank* datasets have been introduced previously; *risk* will be used in Chapter [-@sec-ch9-bayes].
 
@@ -294,7 +294,7 @@ data(bank)
 data(risk)
 ```
 
-#### Partitioning the Data {.unnumbered}
+##### Partitioning the Data {.unnumbered}
 
 16. Partition the *churn* dataset into 75 percent training and 25 percent testing. Set a reproducible seed.
 
@@ -306,7 +306,7 @@ data(risk)
 
 20. Generate density plots to compare the distribution of `income` between training and test sets in the *bank* dataset.
 
-#### Validating the Partition {.unnumbered}
+##### Validating the Partition {.unnumbered}
 
 21. Use a two-sample Z-test to assess whether the churn proportion differs significantly between training and test sets.
 
@@ -318,7 +318,7 @@ data(risk)
 
 25. Select three numerical variables in the *risk* dataset and assess whether their distributions differ between the two subsets.
 
-#### Balancing the Training Dataset {.unnumbered}
+##### Balancing the Training Dataset {.unnumbered}
 
 26. Examine the class distribution of `churn` in the training set. Report the proportion of churners.
 
@@ -328,7 +328,7 @@ data(risk)
 
 29. Create bar plots to compare the class distribution in the *churn* dataset before and after balancing.
 
-### Self-Reflection {.unnumbered}
+#### Self-Reflection {.unnumbered}
 
 30. Which of the three preparation steps (partitioning, validation, and balancing) currently feels most intuitive, and which would benefit from additional practice? Justify the response.
 
