--- a/8-Model-evaluation.qmd
+++ b/8-Model-evaluation.qmd
@@ -542,13 +542,13 @@ column_spec(4, width = "12em")
 
 There is no single metric that universally defines model quality. Evaluation must reflect the goals of the application, balancing trade-offs such as interpretability, fairness, and the costs of different types of errors. By mastering these strategies, you are now prepared to assess models critically, choose thresholds thoughtfully, and compare competing approaches with confidence. In the chapters ahead, we will apply these techniques repeatedly as we build, refine, and evaluate more advanced models.
 
-Now that you have a solid foundation in model evaluation, it is time to put it into practice. In the exercises that follow, you will use the bank dataset to explore how these metrics behave in real-world scenarios.
+Now that you have a solid foundation in model evaluation, it is time to put it into practice. In the exercises that follow, you will use the *bank* dataset to explore how these metrics behave in real-world scenarios.
 
 ## Exercises {#sec-ch8-exercises}
 
 The following exercises reinforce the core concepts of model evaluation introduced in this chapter. Start with conceptual questions to solidify your understanding, continue with hands-on tasks using the *bank* dataset to apply evaluation techniques in practice, and finish with critical thinking and reflection prompts to connect metrics to real-world decision-making.
 
-### Conceptual Questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Why is model evaluation important in machine learning?
 
@@ -590,7 +590,7 @@ The following exercises reinforce the core concepts of model evaluation introduc
 
 20. Why is it important to evaluate models using multiple metrics instead of relying on a single one?
 
-### Hands-On Practice: Model Evaluation with the *bank* Dataset {.unnumbered}
+#### Hands-On Practice: Model Evaluation with the *bank* Dataset {.unnumbered}
 
 For these exercises, we will use the *bank* dataset from the **liver** package. This dataset contains information on customer demographics and financial details, with the target variable *deposit* indicating whether a customer subscribed to a term deposit. It reflects a typical customer decision-making problem, making it ideal for practicing classification evaluation.
 
@@ -606,7 +606,7 @@ data(bank)
 str(bank)
 ```
 
-#### Data Setup to Model {.unnumbered}
+##### Data Setup to Model {.unnumbered}
 
 21. Load the *bank* dataset and identify the target variable and predictor variables.
 
@@ -620,7 +620,7 @@ str(bank)
 
 26. Apply min-max scaling to numerical variables to ensure fair distance calculations in kNN models.
 
-#### Model Training and Evaluation {.unnumbered}
+##### Model Training and Evaluation {.unnumbered}
 
 27. Train a kNN model using the training set and predict *deposit* for the test set.
 
@@ -640,7 +640,7 @@ str(bank)
 
 35. Adjust the classification threshold (e.g., from 0.5 to 0.7) using the `cutoff` argument in `conf.mat()`. How does this impact sensitivity and specificity?
 
-### Critical Thinking and Real-World Applications {.unnumbered}
+#### Critical Thinking and Real-World Applications {.unnumbered}
 
 36. Suppose a bank wants to minimize false positives (incorrectly predicting a customer will subscribe). How should the classification threshold be adjusted?
 
@@ -656,7 +656,7 @@ str(bank)
 
 42. Given the evaluation results from your model, what business recommendations would you make to a financial institution?
 
-### Self-Reflection {.unnumbered}
+#### Self-Reflection {.unnumbered}
 
 43. Which evaluation metric do you find most intuitive, and why?
 
