--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -481,7 +481,7 @@ While this chapter focused on a generative probabilistic model, the next chapter
 
 This section reinforces your understanding of Naive Bayes through conceptual questions, applied tasks, and real-world scenarios.
 
-### Conceptual Questions {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  Why is Naive Bayes considered a probabilistic classification model?
 
@@ -515,11 +515,11 @@ This section reinforces your understanding of Naive Bayes through conceptual que
 
 16. Explain how prior probabilities can be adjusted based on business objectives in a classification problem.
 
-### Hands-on Implementation with the Churn Dataset {.unnumbered}
+#### Hands-On Practice: Naive Bayes with the *churn* Dataset {.unnumbered}
 
 For the following exercises, we will use the *churn* dataset from the **liver** package. This dataset contains information about customer subscriptions, and our goal is to predict whether a customer will churn (`churn = yes/no`) using the Naive Bayes classifier. In Section [-@sec-ch4-EDA-churn], we performed exploratory data analysis to understand the dataset’s structure and key features.
 
-#### Data Preparation {.unnumbered}
+##### Data Setup to Model {.unnumbered}
 
 17. Load the **liver** package and the *churn* dataset:
 
@@ -535,7 +535,7 @@ data(churn)
 
 20. Confirm that the training and test sets have similar distributions of the `churn` variable by comparing proportions.
 
-### Training and Evaluating the Naive Bayes Classifier {.unnumbered}
+##### Training and Evaluating the Naive Bayes Classifier {.unnumbered}
 
 21. Based on the exploratory data analysis in Section [-@sec-ch4-EDA-churn], select the following predictors for the Naive Bayes model: `account.length`, `voice.plan`, `voice.messages`, `intl.plan`, `intl.mins`, `day.mins`, `eve.mins`, `night.mins`, and `customer.calls`. Define the model formula:
 
@@ -571,7 +571,7 @@ formula = churn ~ account.length + voice.plan + voice.messages +
 
 34. Suppose the model performs unusually poorly on a subset of customers. How would you diagnose whether this is due to feature misrepresentation, class imbalance, or violations of the independence assumption?
 
-### Real-World Application and Critical Thinking {.unnumbered}
+##### Critical Thinking {.unnumbered}
 
 35. Suppose a telecommunications company wants to use this model to reduce customer churn. What business decisions could be made based on the model’s predictions?
 
@@ -589,7 +589,7 @@ formula = churn ~ account.length + voice.plan + voice.messages +
 
 42. If given time-series data about customer interactions over months, would Naive Bayes still be appropriate? Why or why not?
 
-### Self-Reflection {.unnumbered}
+#### Self-Reflection {.unnumbered}
 
 43. In your own words, what are the key strengths and limitations of the Naive Bayes classifier?
 
